--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bulletjournal"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
+
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Bulletjournal">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity android:name=".LoginActivity" android:theme="@style/Theme.Bulletjournal" />
+        <activity android:name=".RegisterActivity" android:theme="@style/Theme.Bulletjournal" />
+        <activity android:name=".HomeActivity" android:theme="@style/Theme.Bulletjournal" />
+
+    </application>
 </manifest>
