--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
 
         <activity
             android:name=".MainActivity"
-
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Bulletjournal">
@@ -28,7 +27,7 @@
         <activity android:name=".LoginActivity" android:theme="@style/Theme.Bulletjournal" />
         <activity android:name=".RegisterActivity" android:theme="@style/Theme.Bulletjournal" />
         <activity android:name=".HomeActivity" android:theme="@style/Theme.Bulletjournal" />
+        <activity android:name=".AddNoteActivity" android:theme="@style/Theme.Bulletjournal" />
 
     </application>
 </manifest>
-
